--- a/index.html
+++ b/index.html
@@ -2,31 +2,36 @@
 <html>
   <head>
     <title>Startup</title>
-        <!-- Required meta tags -->
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
+    <!-- Note that the below Bootstrap file is a specific version. If you grab the most
+    current from Bootstrap website, you will see the button grow transition being a lot faster
+    than in my video.  Use whichever style sheet you like best! -->
     <!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
-
+    <!-- My own stylesheet -->
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container d-flex align-items-center h-100">
-       <div class="row">
-        <div class="col-12"><h1 class="text-uppercase text-center"><strong>The Biggest Startup Event of the Year</strong></h1>
-          <section class="buffer col-12">
-          </section>
+      <div class="container d-flex align-items-center h-100">
+        <div class="row">
+          <header class="text-center col-12">
+              <h1 class="text-uppercase">
+                <strong>the biggest startup event of the year</strong>
+              </h1>
+              
+          </header>
+          <div class="buffer col-12"></div>
           <section class="text-center col-12">
-            <a href:"https://docs.google.com/forms/d/17JSrvEa87qbknnMAhuNqkvbqvLH53zHzwsyN-bPXJZ0/edit">
-        <button class="btn btn-primary btn-xl">Find out more</button></a>
-      </section>
+            <hr>
+            <a href="https://docs.google.com/forms/d/17JSrvEa87qbknnMAhuNqkvbqvLH53zHzwsyN-bPXJZ0/edit" ><button  class="btn btn-primary btn-xl">Find Out More</button></a>
+          </section>
         </div>
+        
       </div>
-    </div>
-
   </body>
 </html>
