--- a/index.html
+++ b/index.html
@@ -1,37 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Startup</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-
-    <!-- Note that the below Bootstrap file is a specific version. If you grab the most
-    current from Bootstrap website, you will see the button grow transition being a lot faster
-    than in my video.  Use whichever style sheet you like best! -->
-    <!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- My own stylesheet -->
-    <link href="style.css" rel="stylesheet">
-  </head>
-  <body>
-      <div class="container d-flex align-items-center h-100">
-        <div class="row">
-          <header class="text-center col-12">
-              <h1 class="text-uppercase">
-                <strong>the biggest startup event of the year</strong>
-              </h1>
-              
-          </header>
-          <div class="buffer col-12"></div>
-          <section class="text-center col-12">
-            <hr>
-            <a href="https://docs.google.com/forms/d/17JSrvEa87qbknnMAhuNqkvbqvLH53zHzwsyN-bPXJZ0/edit" ><button  class="btn btn-primary btn-xl">Find Out More</button></a>
-          </section>
-        </div>
-        
-      </div>
-  </body>
+<head>
+  <!-- the below meta tag is default in most modern browsers. however if you have an
+  older browser, the emojis may not show up properly. In which case you need this meta
+  tag. Read more here: https://teamtreehouse.com/community/meta-charsetutf8-what-does-this-mean-or-what-does-it-do-i-deleted-it-from-the-code-and-nothing-changed -->
+  <meta charset="utf-8" >  
+  <title>Grid Master</title>
+  <link rel="stylesheet" type="text/css" href="./style.css">
+</head>
+<body>
+  <div class="container">
+    <div class="zone green">🦊</div>
+    <div class="zone red">🐰</div>
+    <div class="zone blue">🐸</div>
+    <div class="zone yellow">🦁</div>
+    <div class="zone purple">🐯</div>
+    <div class="zone brown">🐭</div>
+    <div class="zone green">🦄</div>
+    <div class="zone red">🐲</div>
+    <div class="zone blue">🐷</div>
+    <div class="zone yellow">🐺</div>
+    <div class="zone purple">🐼</div>
+    <div class="zone brown">🐻</div>
+  </div>
+</body>
 </html>
