--- a/Net Ninja/ModernJavaScript/Lesson_52_DOM_Children/index.html
+++ b/Net Ninja/ModernJavaScript/Lesson_52_DOM_Children/index.html
@@ -5,32 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Javascript</title>
+    <title class="title">Javascript</title>
 </head>
 
 <body>
-    <h1 class="title" style="color: orange">The DOM</h1>
+    <h1 id="page-title" style="color: orange">The DOM</h1>
     <p class="error">This is an error.</p>
 
     <div>
-        <p>lorem error ipsum</p>
         <p>lorem success ipsum</p>
         <p>lorem ipsum lorem</p>
-        <p>lorem ipsum lorem</p>
         <p>error lorem ipsum</p>
-        <p>lorem ipsum lorem</p>
         <p>success lorem ipsum</p>
     </div>
-    <p><a href="http://google.com">Website Link</a></p>
+    <h4><a href="http://google.com">Website Link</a></h4>
     <div class='content'>
         <p>This is the content.</p>
     </div>
 
     <article>
-        <h2>Aricle Title</h2>
-        <p>lorem ipsum dolor sit amet</p>
-        <p>lorem ipsum dolor sit amet</p>
-        <p>lorem ipsum dolor sit amet</p>
+        <h2>Article Title</h2>
+        <p>lorem ipsum dolor sit amet1</p>
+        <p>lorem ipsum dolor sit amet2</p>
+        <p>lorem ipsum dolor sit amet3</p>
         <p>written by the net ninja.</p>
     </article>
 
