--- a/Net Ninja/ModernJavaScript/Lesson_52_DOM_Children/index.html
+++ b/Net Ninja/ModernJavaScript/Lesson_52_DOM_Children/index.html
@@ -11,7 +11,6 @@
 <body>
     <h1 id="page-title" style="color: orange">The DOM</h1>
     <p class="error">This is an error.</p>
-
     <div>
         <p>lorem success ipsum</p>
         <p>lorem ipsum lorem</p>
@@ -24,7 +23,7 @@
     </div>
 
     <article>
-        <h2>Article Title</h2>
+        <h2 class="title">Article Title</h2>
         <p>lorem ipsum dolor sit amet1</p>
         <p>lorem ipsum dolor sit amet2</p>
         <p>lorem ipsum dolor sit amet3</p>
