--- a/Net Ninja/ModernJavaScript/Lesson_53_Events/index.html
+++ b/Net Ninja/ModernJavaScript/Lesson_53_Events/index.html
@@ -15,6 +15,10 @@
             background: rgb(154, 205, 235);
             border: 1px dotted #ddd;
         }
+
+        .green {
+            background-color: green;
+        }
     </style>
 </head>
 
