--- a/Net Ninja/ModernJavaScript/Lesson_78 Todos Project/Index.html
+++ b/Net Ninja/ModernJavaScript/Lesson_78 Todos Project/Index.html
@@ -37,6 +37,10 @@
                 <span>make a veggie pie</span>
                 <i class="far fa-trash-alt delete"></i>
             </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span>make chicken vegitable soup</span>
+                <i class="far fa-trash-alt delete"></i>
+            </li>
         </ul>
 
         <form class="add text-center my-4">
