--- a/Net Ninja/ModernJavaScript/Lesson_87 Async Code/index.html
+++ b/Net Ninja/ModernJavaScript/Lesson_87 Async Code/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <h1>Async Code</h1>
     <button id="firstButton">Button</button>
     <script src="app.js"></script>
 </body>
